Payout tab view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,8 @@
     <string name="txt_type">Item Type</string>
     <string name="title_item_list">Item List</string>
     <string name="title_add_new_item">Add New Item</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="btxt_new_settlement">Add Settlement</string>
 </resources>
