--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,8 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="btxt_new_settlement">Add Settlement</string>
+    <string name="txt_correction">Correction</string>
+    <string name="txt_note">Note</string>
+    <string name="title_add_settlement">Add Settlement</string>
+    <string name="title_report">Payout Report</string>
 </resources>
