Added entry point for inventory list

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,5 @@
     <string name="txt_note">Note</string>
     <string name="title_add_settlement">Add Settlement</string>
     <string name="title_report">Payout Report</string>
+    <string name="title_activity_inventory_list">InventoryListActivity</string>
 </resources>
