--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,15 +41,23 @@
     <string name="title_add_settlement">Add Settlement</string>
     <string name="title_report">Payout Report</string>
     <string name="title_activity_inventory_list">InventoryListActivity</string>
-    <string name="btxt_delete">Delete</string>
+    <string name="btxt_delete">Remove</string>
     <string name="btxt_add">Add</string>
 
 
     <string name="rtxt_new_production">New Production</string>
     <string name="rtxt_stock_transfer_reversal">Stock Transfer Reversal</string>
     <string name="rtxt_sale">Sale</string>
-    <string name="rtxt_stock_transfer">Stock Transfer </string>
+    <string name="rtxt_stock_transfer">Stock Transfer</string>
     <string name="rtxt_others">Others</string>
+    <string name="txt_price">Price</string>
+    <string name="txt_intent">Reason</string>
+    <string name="btxt_add_product">Add Units</string>
+    <string name="btxt_remove_product">Remove Units</string>
+    <string name="btxt_confirm">Confirm</string>
+    <string name="txt_price_per_unit">Price/Unit</string>
+    <string name="txt_total_amount">Total Amount</string>
+    <string name="txt_no_data_found">No Data Found</string>
 
 
 </resources>
